# travel-road-sage

./: .gitignore  README.md  package-lock.json  package.json  project.config.json  tsconfig.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/routers/: admin.py  chat.py  map.py  plan.py  plans.py  search.py  user.py
backend/app/services/: amap_mcp.py  database.py  deepseek_ai.py  planner.py  search.py
backend/utils/: ddgs_utils.py
config/: index.ts
src/: app.config.ts  app.scss  app.tsx  project.config.json
src/components/Calendar/: index.scss  index.tsx
src/components/Markdown/: index.scss  index.tsx
src/config/: index.ts
src/pages/chat/: index.config.ts  index.scss  index.tsx
src/pages/explore/: index.scss  index.tsx
src/pages/favorites/: index.scss  index.tsx
src/pages/myplans/: index.scss  index.tsx
src/pages/plan/: detail.config.ts  detail.scss  detail.tsx
src/pages/profile/: index.scss  index.tsx
src/pages/settings/: index.scss  index.tsx
src/pages/trip/: index.config.ts  index.scss  index.tsx
src/services/: api.ts
src/store/: index.ts
